--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ excerpt_separator: "[-----]"
 # mode: dev
 mode: product
 url: https://unifreak.github.io/
-devurl: http://localhost:4000
+devurl: http://localhost:4000/
 name: UniFreak
 title: UniFreak | Another yet unique freak is showing a freakshow
 description: "Fanghao's personal weblog, on coding or such stuff"
