--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: rouge
 #     syntax_highlighter: rouge
 
 gems: [jekyll-paginate]
-paginate: 7
+paginate: 8
 paginate_path: "page:num"
 layout: post
 permalink: /:categories/:title
@@ -20,37 +20,28 @@ excerpt_separator: "[-----]"
 mode: product
 url: https://LiMingFei56.github.io/
 devurl: http://localhost:4000/
-name: UniFreak
-title: UniFreak | Another yet unique freak is showing a freakshow
-description: "Fanghao's personal weblog, on coding or such stuff"
+name: 李鸣飞的博客
+title: 李鸣飞的博客 | Dust to dust, soil to soil, ash to ash
+description: "李鸣飞的博客"
 
 my:
-    displayName: UniFreak
-    realName: FangHao
-    realName_cn: 方浩
-    jobTitle: "PHP Coder"
+    displayName: 李鸣飞
+    realName: MingFei Li
+    realName_cn: 李鸣飞
+    jobTitle: "全栈"
     contact:
-        qq: 744910240
-        email: fanghao90s@gmail.com
-        github: http://www.github.com/UniFreak
-        qzone: http://744910240.qzone.qq.com
-        pinterest: https://www.pinterest.com/miblah/
-        tel: 153 6999 7084
+        qq: 757563349@qq.com
+        email: 757563349@gmail.com
         address:
             country: China
-            state: Beijing
-            city: Beijing
-            distribute: ChaoYang
-            postcode: 000000
-            cell: "Wangxin Garden"
+            state: Hubei
+            city: Wuhan
     skills:
         frontend: ["HTML | Markdown", "CSS | SASS", "JS | jQuery", "Bootstrap"]
-        backend: ["PHP", "Python", "Shell", MySQL", "Redis", "Regex", "Laravel", "Lumen"]
-        tools: ["Sublime Text", "Git | Github", "Linux", "Jekyll | Liquid"]
-
-collections:
-    qqGroupGuide:
-        output: true
+        backend: ["C/C++", "Python", "Shell", "SQL", "JavaWeb"]
+        mobile: ["Android", "iOS", "Flutter"]
+        libs: ["OpenCV"]
+        tools: ["NeoVim", "Git | Github", "Linux"]
 
 defaults:
   - scope:
@@ -58,8 +49,3 @@ defaults:
         type: "posts"
     values:
         excerpt: "{{ page.content }} | slice: 0 300"
-  - scope:
-        path: ""
-        type: "qqGroupGuide"
-    values:
-        layout: markdownreader_bare
