--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ mode: product
 url: https://LiMingFei56.github.io/
 devurl: http://localhost:4000/
 name: 李鸣飞的博客
-title: 李鸣飞的博客 | Dust to dust, soil to soil, ash to ash
-description: "李鸣飞的博客"
+title: Trinity Blood | Dust to dust, soil to soil, ash to ash
+description: "Trinity Blood "
 
 my:
     displayName: 李鸣飞
