--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ excerpt_separator: "[-----]"
 mode: product
 url: https://LiMingFei56.github.io/
 devurl: http://localhost:4000/
-name: 李鸣飞的博客
+name: Trinity Blood 
 title: Trinity Blood | Dust to dust, soil to soil, ash to ash
 description: "Trinity Blood "
 
